...
            app:strokeWidth="2dp"
            tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cardLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cardContentLayout"
                    app:layout_constraintEnd_toStartOf="@+id/cardButtonLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="48dp">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardLabelLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@color/backgroundSecondary">

                    <TextView
                            android:text="@string/family_label"
                            android:contentDescription="@string/family_label"
                            style="@style/NormalChipStyle"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cardLabel"
                            android:gravity="center"
                            android:paddingVertical="6dp"
                            tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <TextView
                        style="@style/CardTitleStyle"
                        android:text="@string/card_title_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardTitle"
                        app:layout_constraintBottom_toTopOf="@+id/cardDob"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/cardLabelLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp" />

...

                <com.google.android.material.button.MaterialButton
                        android:background="@drawable/card_detail_button"
                        android:contentDescription="@string/card_detail_content_description"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:id="@+id/detailButton"
                        app:layout_constraintHeight_percent="0.5"
                        app:backgroundTint="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
...
