<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/personalInputLayout"
        android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_section"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textSecondary"
            app:boxStrokeColor="@color/textTertiary"
            app:hintTextColor="@color/textTertiary"
            android:backgroundTint="@color/textTertiary"
            app:helperTextEnabled="true"
            app:helperText="@string/full_name_helper"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:textSize="18sp"
                android:id="@+id/fullNameEditText"
                android:background="@color/defaultTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_section"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textSecondary"
            app:boxStrokeColor="@color/textTertiary"
            app:hintTextColor="@color/textTertiary"
            android:backgroundTint="@color/textTertiary"
            app:helperTextEnabled="true"
            app:helperText="@string/date_of_birth_helper"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameInputField"
            android:layout_marginTop="24dp">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:textSize="18sp"
                android:id="@+id/dobEditText"
                android:background="@color/defaultTheme"
                android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender_section"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textSecondary"
            app:boxStrokeColor="@color/textTertiary"
            app:hintTextColor="@color/textTertiary"
            android:backgroundTint="@color/textTertiary"
            app:helperTextEnabled="true"
            app:helperText="@string/gender_helper"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dobInputField"
            android:layout_marginTop="24dp">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:textSize="18sp"
                android:id="@+id/genderEditText"
                android:background="@color/defaultTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/genderInputField"
            app:layout_constraintEnd_toEndOf="@+id/genderInputField"
            app:layout_constraintStart_toStartOf="@+id/genderInputField"
            android:background="@color/defaultTheme"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal">

        <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filterInputLabelGroup"
                app:layout_constraintEnd_toEndOf="@+id/genderField"
                app:layout_constraintStart_toStartOf="@+id/genderField"
                app:layout_constraintTop_toBottomOf="@+id/genderField"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:checkedChip="@id/familyInputChip"
                app:chipSpacingVertical="8dp"
                android:paddingVertical="8dp">

            <com.google.android.material.chip.Chip
                    style="@style/InputChipStyle"
                    android:text="@string/family_label"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    app:chipStrokeWidth="1dp"
                    android:id="@+id/familyInputChip"
                    android:textAlignment="center"
                    app:chipCornerRadius="8dp"
                    android:layout_margin="8dp" />

            <com.google.android.material.chip.Chip
                    style="@style/InputChipStyle"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_label"
                    android:id="@+id/friendInputChip"
                    app:chipStrokeWidth="1dp"
                    android:textAlignment="center"
                    app:chipCornerRadius="8dp"
                    android:layout_margin="8dp" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <Button
            style="@style/ButtonStyle"
            android:text="@string/button_cancel_text"
            android:id="@+id/inputCancelButton"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/button_cancel_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/inputNextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <Button
            style="@style/ButtonStyle"
            android:text="@string/button_next_text"
            android:id="@+id/inputNextButton"
            android:backgroundTint="@color/backgroundSecondary"
            android:contentDescription="@string/button_next_text"
            app:layout_constraintStart_toEndOf="@+id/inputCancelButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputCancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>