...
    <string name="detail_activity_title">Profile Detail</string>
    <string name="input_activity_title_add">Add new profile</string>
    <string name="input_activity_title_modify">Modify current profile</string>

    <!-- String for main activity -->
    <string name="main_activity_all_filter">All</string>
    <string name="main_activity_floating_button_text">Add</string>
    <string name="card_title_default">Viet Hoang Pham</string>
    <string name="card_dob_default">10/10/2010</string>
    <string name="card_detail_content_description">Detail</string>
    <string name="card_delete_content_description">Delete</string>

    <!-- String for detail & input activity -->
    <string name="full_name_section">Full Name <font color="#FF0000">*</font></string>
    <string name="gender_section">Gender</string>
    <string name="date_of_birth_section">Date Of Birth <font color="#FF0000">*</font></string>
...
    <string name="phone_empty">Phone number is required</string>
    <string name="phone_invalid">Phone number is in invalid format</string>

    <!-- String for buttons -->
    <string name="button_return_text">Return</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_next_text">Next</string>
    <string name="button_save_text">Save</string>
    <string name="button_modify_text">Modify</string>

    <!-- Extra String -->
    <string name="family_label">Family</string>
    <string name="friend_label">Friend</string>
    <string name="divider">|</string>

</resources>
