<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contactInputLayout"
        android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_phone_section"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textSecondary"
            app:boxStrokeColor="@color/textTertiary"
...

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:textSize="18sp"
                android:id="@+id/phoneEditText"
                android:background="@color/defaultTheme"
                android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
            android:text="@string/button_return_text"
            android:id="@+id/inputReturnButton"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/button_return_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/inputSaveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <Button
            style="@style/ButtonStyle"
            android:text="@string/button_save_text"
...
